SFDCProject/src/objects/Commission__c.object
<CustomObject>
    <description>Integration</description>
    <fields>
        <fullName>Adder_Discrepancy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To better track discrepancies in adders between how the project was sold, and how the project was designed</description>
        <inlineHelpText>Used to better track discrepancies in adders between how the project was sold, and how the project was designed</inlineHelpText>
        <label>Adder Discrepancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adder_Discrepancy_notes__c</fullName>
        <description>Notes for if Adder Discrepancy field is checked</description>
        <label>Adder Discrepancy notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comi_Consultant_Rec_Split__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field which captures the name of consultant who should receive the other half of a split commission.</description>
        <inlineHelpText>Enter the consultant who should receive the other half of the commission split.</inlineHelpText>
        <label>Commission Consultant Rec. Split</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Consultant_Rec_Split__c</fullName>
        <description>% of commission that will go to the consultant receiving the split commission</description>
        <label>Commission Consultant Rec Split (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission_Exception__c</fullName>
        <description>Integration</description>
        <label>Commission Exception (%)</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Notes__c</fullName>
        <description>Integration</description>
        <label>Commission Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Difference_Price_Watt_SP_MP__c</fullName>
        <formula>Sales_Price_Watt_for_Commissions__c  -  Minimum_Price_Watt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference Price/Watt (SP-MP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <label>External Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_id__c</fullName>
        <externalId>true</externalId>
        <label>External id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Price_Updated__c</fullName>
        <description>Integration</description>
        <label>Min Price Updated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Price_Watt__c</fullName>
        <formula>Opportunity__r.Minimum_Price_Watt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Price Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Price_Watt__c</fullName>
        <label>Minimum Price/Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_System_Size_DC_Watts__c</fullName>
        <description>The total size of the project Solar system in DC Watts.</description>
        <inlineHelpText>The total size of the project Solar system in DC Watts.</inlineHelpText>
        <label>Proposed System Size (DC Watts)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Watt_Adjustment__c</fullName>
        <label>Sales Price/Watt Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Watt__c</fullName>
        <formula>Total_Contract_Amount__c  /  Proposed_System_Size_DC_Watts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price/Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Watt_for_Commissions__c</fullName>
        <formula>Sales_Price_Watt_Adjustment__c  +  Sales_Price_Watt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price/Watt for Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Amount__c</fullName>
        <description>Equal to Total Contract Amount (includes Sales Tax). Different from &quot;Amount (Pre-Tax)&quot; field that is equal to Estimated Revenue (Total Contract Amount less Sales Tax).</description>
        <inlineHelpText>Equal to Total Contract Amount (includes Sales Tax). Different from &quot;Amount (Pre-Tax)&quot; field that is equal to Estimated Revenue (Total Contract Amount less Sales Tax).</inlineHelpText>
        <label>Total Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission</label>
    <nameField>
        <displayFormat>COMM-{0000000}</displayFormat>
        <label>Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>